--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,7 +20,7 @@
 .skip-transition { transition: none !important; }
 
 /* make buttons inherit font */ 
-button { font-family: inherit; font-size: inherit; }
+button, input[type="submit"] { font-family: inherit; font-size: inherit; }
 
 /* clickable things should use this cursor imo */
 button, a { cursor: pointer; }
@@ -68,7 +68,7 @@ html, body {
     flex: 0;
 }
 
-#chat-input input {
+#chat-input input[type="text"] {
     background: black;
 
     color: white;
