--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html
     head
         title low tech template
         meta(charset="utf-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1")
         // styles
         style#base-style
             include styles/style.css
